--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,17 +34,21 @@ dependencies:
   get_it: ^7.7.0
   sqflite: ^2.3.3+1
   path_provider: ^2.1.4
+  flutter_lints: ^5.0.0
 
 dev_dependencies:
   mockito: ^5.0.8
   build_runner: ^2.0.4
   flutter_test:
     sdk: flutter
+  integration_test:
+    sdk: flutter
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter.
+  sqflite_common: any
 flutter:
 
   # The following line ensures that the Material Icons font is
