--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,13 @@ dependencies:
   sqflite: ^2.3.3+1
   path_provider: ^2.1.4
   flutter_lints: ^5.0.0
+  flutter_bloc: ^8.1.4
+  bloc: ^8.1.3
 
 dev_dependencies:
   mockito: ^5.0.8
   build_runner: ^2.0.4
+  bloc_test: ^9.1.6
   flutter_test:
     sdk: flutter
   integration_test:
