--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   flutter_lints: ^5.0.0
   flutter_bloc: ^8.1.4
   bloc: ^8.1.3
+  firebase_core: ^3.13.0
+  firebase_crashlytics: ^4.3.5
 
 dev_dependencies:
   mockito: ^5.0.8
