--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,6 @@ dependencies:
   provider: ^6.1.2
   dartz: ^0.10.1
   equatable: ^2.0.5
-  google_fonts: ^6.2.1
   flutter_rating_bar: ^4.0.1
   cached_network_image: ^3.4.1
   get_it: ^7.7.0
@@ -39,6 +38,8 @@ dependencies:
   bloc: ^8.1.3
   firebase_core: ^3.13.0
   firebase_crashlytics: ^4.3.5
+  common:
+    path: common
 
 dev_dependencies:
   mockito: ^5.0.8
