feat: Add About feature with navigation and related pages

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,10 @@ dependencies:
     path: domain
   data:
     path: data
+  navigation:
+    path: navigation
+  about:
+    path: "feature/about"
 
 dev_dependencies:
   mockito: ^5.0.8
